Fix mobile black contrast

--- a/src/color-schemes/contrast.scss
+++ b/src/color-schemes/contrast.scss
@@ -20,6 +20,7 @@ body.is-mobile.contrast-dark-black-mobile.theme-dark {
 
   --background-primary-alt: var(--color-base-05);
   --background-secondary-alt: var(--color-base-10);
+  --background-modifier-border: var(--background-modifier-hover);
 
   background-color: black;
 
